Visualize data now correctly processes all user input and saves it locally so it can be used further down the analysis. Cut off now creates a proper swarm plot with a formula that can be filled in by the user to decide on the outliers value. After submitting, a new plot without the outliers is created, and finally the formula for the cut-off value can be filled in by the user. This value will then be stored to use in the last steps of the analysis.

--- a/ELISA_app/ELISA_core/static/css/Visualize_data.css
+++ b/ELISA_app/ELISA_core/static/css/Visualize_data.css
@@ -17,7 +17,7 @@
 #checkboxes {
     position: relative;
     float: right;
-    margin-top: 5%;
+    margin-top: 1.3%;
     margin-left: 20px;
 }
 
@@ -31,6 +31,10 @@
 
 #Healthydonor {
     position: fixed;
-    bottom: 10px;
-    right: 10px;
+    bottom: 2%;
+    right: 2%;
+}
+
+#spacing {
+    margin-left: 5px;
 }
